--- a/pages/subport.html
+++ b/pages/subport.html
@@ -35,7 +35,14 @@
       </div>
       <div class="text-container" id="textContainer">
         <div id="tab1Content" style="display: none;">
-            <p>Monash</p>
+            <p>Monash
+              Monash info: The Chinese community in Victoria is the second largest in Australia. Many 
+              people in the Chinese community live in Melbourne’s south–eastern and eastern suburbs. 
+              The City of Monash is home to one of the largest Chinese communities in Victoria with 
+              47,238 people. The City of Whitehorse is next with 44,445 people.  
+
+The Chinese community is an established and steadily growing community in Victoria, with 27% of the population arriving between 2016 and 2021.
+            </p>
         </div>
         <div id="tab2Content" style="display: none;">
             <p>Wyndham</p>
