--- a/pages/navbar-footer/navbar.html
+++ b/pages/navbar-footer/navbar.html
@@ -20,8 +20,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="../lib/animate/animate.min.css" rel="stylesheet">
+    <link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -42,12 +42,25 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="../index.html" class="nav-item nav-link">Home</a>
                     <a href="../pages/infohub.html" class="nav-item nav-link">Info Hub</a>
                     <a href="../pages/subport.html" class="nav-item nav-link">Subpurban Portal</a>
-                    <a href="../pages/subport.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="../pages/contact.html" class="nav-item nav-link">Contact Us</a>
 
                 </div>
             </div>
         </nav>
         <!-- Navbar End -->
+
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/waypoints/waypoints.min.js"></script>
+ 
+ 
+</body>
+
+</html>
