--- a/pages/subport.html
+++ b/pages/subport.html
@@ -57,17 +57,19 @@
         <!-- Page Header End -->
 
 
-        <!-- Contact Start -->
+        <!-- Detail Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Get In Touch</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit
-                        eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
+                    <h1 class="mb-3">What is Suburban Portal?</h1>
+                    <p>It is a map designed to display the local government (LGA) and suburban areas 
+                        related to the where the top five migrant demographics resides in Victoria. It serves as 
+                        a centralized hub where parents can view the surrounding schools and its details.</p>
+                    <p> *Click on the buttons to see the LGA, suburb, and school locations for each demographic.</p>
                 </div>
             </div>
         </div>
-        <!-- Contact End -->
+        <!-- Detail End -->
 
         <section class="section1" id="section1">
             <h1>School Locater</h1>
@@ -249,7 +251,4 @@
     <script src="../js/main.js"></script>
     <script src="../js/home/popupmodal.js"></script>
 </body>
- 
- 
-
 </html>
