working on challenges

--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -91,8 +91,13 @@
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1 class="mb-4">Make Appointment</h1>
-
+                                <h1>Migrations in Austar</h1>
+                                <p class="mb-4">Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                                <ul>
+                                    <li>Point 1: Description of point 1.</li>
+                                    <li>Point 2: Description of point 2.</li>
+                                    <li>Point 3: Description of point 3.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -107,7 +112,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">School Classes</h1>
+                    <h1 class="mb-3">Challenges</h1>
                     <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
                 </div>
                 <div class="row g-4">
