--- a/pages/subport.html
+++ b/pages/subport.html
@@ -82,57 +82,50 @@
                   <div class="tab" onclick="showContent('tab4')" data-tab="tab4">Vietnam</div>
                 </div>
               </div>
-              <div class="text-container" id="textContainer">
+                <div class="text-container" id="textContainer">
                 <div id="tab1Content" style="display: none;">
-                  <h2>Monash LGA</h2>
-                    <p>
-                        The Chinese community in Victoria is the second largest in Australia. Many people in the Chinese community 
-                        live in Melbourne’s south–eastern and eastern suburbs. The City of Monash is home to one 
-                        of the largest Chinese communities in Victoria with 47,238 people. The City of Whitehorse 
-                        is next with 44,445 people. The Chinese community is an established and steadily growing community 
-                        in Victoria, with 27% of the population arriving between 2016 and 2021.
-                    </p>
+                    <h2>Monash LGA</h2>
+                    <ul>
+                        <li>The Chinese community in Victoria is the second largest in Australia.</li>
+                        <li>Many people in the Chinese community live in Melbourne’s south–eastern and eastern suburbs.</li>
+                        <li>The City of Monash is home to one of the largest Chinese communities in Victoria with 47,238 people.</li>
+                        <li>The Chinese community is an established and steadily growing community in Victoria, with 27% of the population arriving between 2016 and 2021.</li>
+                    </ul>
                 </div>
                 <div id="tab2Content" style="display: none;">
-                  <h2>Wyndham LGA</h2>
-                    <p>
-                        The Indian community in Victoria is one of the largest in Australia.  Many people in the 
-                        Indian community live in Melbourne’s south–eastern and north–western suburbs. The City 
-                        of Wyndham is home to one of the largest Indian communities in Victoria with 65,433 people.
-                        The City of Casey is next with 44,967 people. Between 2011 and 2021, the Indian community
-                        in Victoria continued to grow. The majority (55.3%) of the Indian community arrived in 
-                        Victoria during this period.
-                    </p>
-            
-                    <p>
-                        The Filipino community in Victoria is the second largest in Australia. Many people in the
-                        Filipino community live in Melbourne’s south–western and south–eastern suburbs. The City 
-                        of Wyndham is home to one of the largest Filipino communities in Victoria with 10,628 people.
-                        The City of Casey is next with 9,485 people. Between 1981 and 2016, the increase in the 
-                        Philippines–born population of Victoria soared and went from 3,55 to 51,287 people. 
-                        The Filipino community is growing, with many people arriving between 2016 and 2021.
-                    </p>
+                    <h2>Wyndham LGA</h2>
+                    <p>Indian </p>
+                    <ul>
+                        <li>The Indian community in Victoria is one of the largest in Australia.</li>
+                        <li>Many people in the Indian community live in Melbourne’s south–eastern and north–western suburbs.</li>
+                        <li>The City of Wyndham is home to one of the largest Indian communities in Victoria with 65,433 people.</li>
+                        <li>The City of Casey is next with 44,967 people. Between 2011 and 2021, the Indian community in Victoria continued to grow. The majority (55.3%) of the Indian community arrived in Victoria during this period.</li>
+                    </ul>
+                    <p>Filipino</p>
+                    <ul>
+                        <li>The Filipino community in Victoria is the second largest in Australia.</li>
+                        <li>Many people in the Filipino community live in Melbourne’s south–western and south–eastern suburbs.</li>
+                        <li>The City of Wyndham is home to one of the largest Filipino communities in Victoria with 10,628 people.</li>
+                        <li>The Filipino community is growing, with many people arriving between 2016 and 2021.</li>
+                    </ul>
                 </div>
                 <div id="tab3Content" style="display: none;">
-                  <h2>Casey LGA</h2>
-                    <p>
-                        The Sri Lankan community in Victoria is the largest in Australia. Many people in the 
-                        Sri Lankan community live in Melbourne’s south–eastern suburbs. The City of Casey is 
-                        home to one of the largest Sri Lankan communities in Victoria with 18,184 people. 
-                        The City of Monash is next with 8,472 people. The Sri Lankan community is growing 
-                        and many people arrived between 2001 and 2010.
-                    </p>
+                    <h2>Casey LGA</h2>
+                    <ul>
+                        <li>The Sri Lankan community in Victoria is the largest in Australia.</li>
+                        <li>Many people in the Sri Lankan community live in Melbourne’s south–eastern suburbs.</li>
+                        <li>The City of Casey is home to one of the largest Chinese communities in Victoria with 18,184 people.</li>
+                        <li>The Chinese community is growing and and many people arrived between 2001 and 2010.</li>
+                    </ul>
                 </div>
                 <div id="tab4Content" style="display: none;">
-                  <h2>Brimbank LGA</h2>
-                    <p>
-                        The Vietnamese community in Victoria is one of the largest in Australia. Many people
-                        in the Vietnamese community live in Melbourne’s south–eastern and western suburbs. 
-                        The City of Brimbank is home to one of the largest Vietnamese communities in Victoria 
-                        with 32,861 people. The City of Greater Dandenong is next with 17,653 people. The 
-                        Vietnamese community is well established in Victoria, with many arriving between 1981 
-                        and 1990.
-                    </p>
+                    <h2>Brimbank LGA</h2>
+                    <ul>
+                        <li>The Vietnamese community in Victoria is the largest in Australia.</li>
+                        <li>Many people in the Vietnamese community live in Melbourne’s south–eastern and western suburbs</li>
+                        <li>The City of Brimbank is home to one of the largest Chinese communities in Victoria with 32,861 people.</li>
+                        <li>The Chinese community is well established in Victoria, with many arriving between 1981 and 1990.</li>
+                    </ul>
                 </div>
             </div>
               <div class="dropdown" id="dropdownTab1"  data-tab="tab1">
