added collapsable button to challenges

--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -122,7 +122,10 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-1.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">Art & Drawing</a>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4">Proficiency in English / Language barrier <span class="arrow">&#9660;</span></button>
+                                <div class="collapsible-content">
+                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -201,6 +204,7 @@
         <script src="../js/home/popupmodal.js"></script>
         <script src="../js/info_hub/line_graph.js"></script>
         <script src="../js/info_hub/bar_graph.js"></script>
+        <script src="../js/info_hub/collapsible.js"></script>
     </body>
      
      
