--- a/index.html
+++ b/index.html
@@ -128,20 +128,21 @@
             </div>
             <div class="owl-carousel news-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="news-item bg-light rounded p-5" id="news-item-1">
-                    <p class="fs-5"> </p>
+                    <div class="image-heading-container">
+                    <img src="../img/classes-3.jpg" alt="Image Description" class="news-image">
+                    </div>
                     <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                         <div class="ps-3">
                             <h3 class="mb-1">How to prepare for school in Australia</h3>
                             <span>By Allison Chan, ABC Education</span>
                         </div>
                     </div>
-                    <p class="fs-5"> This article features young students sharing their experiences, provide advice for 
-                        studying in Australia and emphasizing the importance of communication skills, 
-                        and adapting to the differences between their home countries and Australia.</p>
+                    <p class="fs-5"> This article features young students sharing their experiences and emphasizing 
+                        the importance of communication skills, and adapting to the differences between their home countries and Australia.</p>
                     <a href="https://www.abc.net.au/education/learn-english/how-im-preparing-for-school-in-australia/8230366" class="btn btn-primary btn-sm" data-target="newsModal1">Learn More</a>
                 </div>
                 <div class="news-item bg-light rounded p-5" id="news-item-2">
-                    <p class="fs-5">  </p>
+                    <img src="../img/classes-3.jpg" alt="Image Description" class="news-image">
                     <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                         <div class="ps-3">
                             <h3 class="mb-1">How to learn to English on your own?</h3>
@@ -150,33 +151,31 @@
                     </div>
                     <p class="fs-5">This video shows content of students who learnt English on their own and 
                         provided various methods to help others on how they can improve their 
-                        proficiency through. This ranged from watching movies to listening to music. </p>
+                        proficiency through. </p>
                     <a href="https://www.abc.net.au/education/learn-english/how-im-learning-english-on-my-own:-students-speak/10586908" class="btn btn-primary btn-sm" data-target="newsModal2">Learn More</a>
                 </div>
                 <div class="news-item bg-light rounded p-5" id="news-item-3">
-                    <p class="fs-5"> </p>
+                    <img src="../img/classes-3.jpg" alt="Image Description" class="news-image">
                     <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                         <div class="ps-3">
-                            <h3 class="mb-1">7 Common Hurdles Faced By New Australian Visa Holders </h3>
+                            <h3 class="mb-1">7 Common Hurdles Faced By New Migrants </h3>
                             <span>By AHWC</span>
                         </div>
                     </div>
-                    <p class="fs-5"> There are many barriers migrants might face when 
-                        integrating into Australia. Read this article to 
-                        further understand the challenges faced by Australian 
+                    <p class="fs-5"> Read this article to further understand the challenges faced by Australian 
                         immigrants as they navigate integration into their new society.</p>
                     <a href="https://ahwc.com.au/australian-immigration-news/7-common-hurdles-faced-new-australian-visa-holders/" class="btn btn-primary btn-sm" data-target="newsModal3">Learn More</a>
                 </div>
                 <div class="news-item bg-light rounded p-5" id="news-item-4">
-                    <p class="fs-5"> </p>
+                    <img src="../img/classes-3.jpg" alt="Image Description" class="news-image">
                     <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                         <div class="ps-3">
                             <h3 class="mb-1"> Learning English: The Aussie slang</h3>
                             <span>By Ann Carter & Jessie Davies</span>
                         </div>
                     </div>
-                    <p class="fs-5">This article offers a glimpse into Australian slangs, including common phrases, greetings, and shortened words. 
-                        It emphasizes the informal nature of slang and how it's utilized in day-to-day discussions among friends.</p>
+                    <p class="fs-5">This article offers a glimpse into Australian slangs, including common phrases, 
+                        greetings, shortened words, and how it's used in day-to-day discussions among friends.</p>
                     <a href="https://www.abc.net.au/education/learn-english/learn-english-aussie-slang/7289548" class="btn btn-primary btn-sm" data-target="newsModal4">Learn More</a>
                 </div>
  
