added buttons and addedd css file

--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -29,6 +29,7 @@
 
     <!-- Template Stylesheet -->
     <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/info_hub.css" rel="stylesheet">
 
     <!-- Responsive Stylesheet -->
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -122,7 +123,7 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-1.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4">Proficiency in English / Language barrier <span class="arrow">&#9660;</span></button>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier1<span class="arrow">&#9660;</span></button>
                                 <div class="collapsible-content">
                                     <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
                                 </div>
@@ -135,7 +136,10 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-2.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">Color Management</a>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier2 <span class="arrow">&#9660;</span></button>
+                                <div class="collapsible-content">
+                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -145,7 +149,10 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-3.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">Athletic & Dance</a>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier3 <span class="arrow">&#9660;</span></button>
+                                <div class="collapsible-content">
+                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -155,7 +162,10 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-4.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">Language & Speaking</a>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier4 <span class="arrow">&#9660;</span></button>
+                                <div class="collapsible-content">
+                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -165,7 +175,10 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-5.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">Religion & History</a>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier5 <span class="arrow">&#9660;</span></button>
+                                <div class="collapsible-content">
+                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -175,7 +188,10 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-6.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">General Knowledge</a>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4 button-text">Language barrier6 <span class="arrow">&#9660;</span></button>
+                                <div class="collapsible-content">
+                                    <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
+                                </div>
                             </div>
                         </div>
                     </div>
