--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                             <span>By Allison Chan, ABC Education</span>
                         </div>
                     </div>
-                    <p class="fs-5"> This article features young students sharing their experiences and emphasizing 
-                        the importance of communication skills, and adapting to the differences between their home countries and Australia.</p>
+                    <p class="fs-5"> This article features young students sharing their experiences, the importance of
+                        communication skills, and adapting to the differences between their home and Australia.</p>
                     <a href="https://www.abc.net.au/education/learn-english/how-im-preparing-for-school-in-australia/8230366" class="btn btn-primary btn-sm" data-target="newsModal1">Learn More</a>
                 </div>
                 <div class="news-item bg-light rounded p-5" id="news-item-2">
