--- a/pages/infohub.html
+++ b/pages/infohub.html
@@ -123,7 +123,7 @@
                                 <img class="img-fluid rounded-circle" src="../img/classes-1.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4">Proficiency in English / Language barrier <span class="arrow">&#9660;</span></button>
+                                <button type="button" class="collapsible d-block text-center h3 mt-3 mb-4">Language barrier1 <span class="arrow">&#9660;</span></button>
                                 <div class="collapsible-content">
                                     <p>Children of new Australian migrants often encounter language barriers that affect their social and academic interactions...</p>
                                 </div>
