update css for subport

--- a/pages/navbar-footer/navbar.html
+++ b/pages/navbar-footer/navbar.html
@@ -44,7 +44,7 @@
                 <div class="navbar-nav mx-auto">
                     <a href="../index.html" class="nav-item nav-link">Home</a>
                     <a href="../pages/infohub.html" class="nav-item nav-link">Info Hub</a>
-                    <a href="../pages/subport.html" class="nav-item nav-link">Subpurban Portal</a>
+                    <a href="../pages/subport.html" class="nav-item nav-link">Suburban Portal</a>
                     <a href="../pages/x.html" class="nav-item nav-link">Curriculum</a>
 
                     <div class="nav-item dropdown">
