--- a/pages/subport.html
+++ b/pages/subport.html
@@ -31,7 +31,6 @@
 
 
     <!-- Template Stylesheet -->
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/subport.css">
 </head>
 
@@ -132,7 +131,7 @@
                     </p>
                 </div>
             </div>
-              <div class="dropdown" id="dropdownTab1"  data-tab="tab1">
+              <div class="suburb-dropdown" id="dropdownTab1"  data-tab="tab1">
                 <select id="dropdownMenuTab1">
                   <option value=""disabled>Select a Suburb</option> 
                   <option value="">Show All</option> 
@@ -148,7 +147,7 @@
                   <option value="Wheelers hill">Wheelers hill</option>
                 </select>
               </div>
-              <div class="dropdown" id="dropdownTab2"  data-tab="tab2">
+              <div class="suburb-dropdown" id="dropdownTab2"  data-tab="tab2">
                 <select id="dropdownMenuTab2">
                   <option value=""disabled>Select a Suburb</option> 
                   <option value="">Show All</option> 
@@ -165,7 +164,7 @@
                   <option value="Wyndham vale">Wyndham vale</option>
                 </select>
               </div>
-              <div class="dropdown" id="dropdownTab3"  data-tab="tab3">
+              <div class="suburb-dropdown" id="dropdownTab3"  data-tab="tab3">
                 <select id="dropdownMenuTab3">
                   <option value=""disabled>Select a Suburb</option> 
                   <option value="">Show All</option> 
@@ -193,7 +192,7 @@
                   <option value="Tooradin">Tooradin</option>
                 </select>
               </div>
-              <div class="dropdown" id="dropdownTab4"  data-tab="tab4">
+              <div class="suburb-dropdown" id="dropdownTab4"  data-tab="tab4">
                 <select id="dropdownMenuTab4">
                   <option value=""disabled>Select a Suburb</option> 
                   <option value="">Show All</option> 
