updated subport intro detail/added divider into subport&index

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         </div>
         <!-- Facilities End -->
 
+        <div class="divider"></div>
+
+
         <!-- About Start -->
         <div class="container-xxl py-5">
             <div class="container">
@@ -94,6 +97,8 @@
         </div>
         <!-- About End -->
 
+        <div class="divider"></div>
+
         <!-- Call To Action Start -->
         <div class="container-xxl py-5">
             <div class="container">
@@ -118,6 +123,9 @@
             </div>
         </div>
         <!-- Call To Action End -->
+
+        <div class="divider"></div>
+
 
     <!-- News Start -->
     <div class="container-xxl py-5">
