added pic into index news

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="owl-carousel news-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="news-item bg-light rounded p-5" id="news-item-1">
                     <div class="image-heading-container">
-                    <img src="../img/classes-3.jpg" alt="Image Description" class="news-image">
+                    <img src="../img/news1.png" alt="Image Description" class="news-image">
                     </div>
                     <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                         <div class="ps-3">
@@ -150,7 +150,7 @@
                     <a href="https://www.abc.net.au/education/learn-english/how-im-preparing-for-school-in-australia/8230366" class="btn btn-primary btn-sm" data-target="newsModal1">Learn More</a>
                 </div>
                 <div class="news-item bg-light rounded p-5" id="news-item-2">
-                    <img src="../img/classes-3.jpg" alt="Image Description" class="news-image">
+                    <img src="../img/news2.png" alt="Image Description" class="news-image">
                     <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                         <div class="ps-3">
                             <h3 class="mb-1">How to learn to English on your own?</h3>
@@ -163,7 +163,7 @@
                     <a href="https://www.abc.net.au/education/learn-english/how-im-learning-english-on-my-own:-students-speak/10586908" class="btn btn-primary btn-sm" data-target="newsModal2">Learn More</a>
                 </div>
                 <div class="news-item bg-light rounded p-5" id="news-item-3">
-                    <img src="../img/classes-3.jpg" alt="Image Description" class="news-image">
+                    <img src="../img/news3.png" alt="Image Description" class="news-image">
                     <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                         <div class="ps-3">
                             <h3 class="mb-1">7 Common Hurdles Faced By New Migrants </h3>
@@ -175,7 +175,7 @@
                     <a href="https://ahwc.com.au/australian-immigration-news/7-common-hurdles-faced-new-australian-visa-holders/" class="btn btn-primary btn-sm" data-target="newsModal3">Learn More</a>
                 </div>
                 <div class="news-item bg-light rounded p-5" id="news-item-4">
-                    <img src="../img/classes-3.jpg" alt="Image Description" class="news-image">
+                    <img src="../img/news4.png" alt="Image Description" class="news-image">
                     <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                         <div class="ps-3">
                             <h3 class="mb-1"> Learning English: The Aussie slang</h3>
