Update Business Hours

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,31 +65,57 @@
                         <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
                             <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
                         </div>
-                        <h6>123 Street, New York, USA</h6>
+                        <h6>Wellington Rd, Clayton VIC 3800, Australia</h6>
                     </div>
                     <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.3s">
                         <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
                             <i class="fa fa-envelope-open fa-2x text-primary"></i>
                         </div>
-                        <h6>info@example.com</h6>
+                        <h6>TBA</h6>
                     </div>
                     <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.5s">
                         <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
                             <i class="fa fa-phone-alt fa-2x text-primary"></i>
                         </div>
-                        <h6>+012 345 6789</h6>
+                        <h6>TBA</h6>
                     </div>
                 </div>
             </div>
         </div>
 
         
-        <!-- Section1 Start -->
-        <section id="section1">
+    <!-- Section1 Start -->
+    <section id="section1" class="container demo-bg">
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <img src="../img/openinghours.jpg" alt="Opening Hours" class="opening-hours-img">
+            </div>
+            <div class="col-sm-6 col-md-8">
+                <div class="business-hours">
+                    <h2 class="title">Opening Hours</h2>
+                    <ul class="list-unstyled">
+                        <li>Sunday <span class="pull-right">Closed</span></li>
+                        <li>Monday <span class="pull-right">9:00-16:00</span></li>
+                        <li>Tuesday <span class="pull-right">9:00-16:00</span></li>
+                        <li>Wednesday <span class="pull-right">9:00-16:00</span></li>
+                        <li>Thursday <span class="pull-right">9:00-16:00</span></li>
+                        <li>Friday <span class="pull-right">9:00-14:00</span></li>
+                        <li>Saturday <span class="pull-right">Closed</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section1 End -->
+
+
+
+
+        <section id="section2">
             <div class="container d-flex">
                 <img src="../img/contact.jpg" alt="Descriptive Image Text">
                 <div class="content">
-                    <h2>The Team</h2>
+                    <h2>TA16- FOUR SQUARE</h2>
                     <p>Meet Our Dedicated Team Members</p>
                     <p>Jitesh - Data Science</p>
                     <p>Sowmya - Data Science</p>
